<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".MainActivity">
  <item
      android:id="@+id/action_sort"
      app:showAsAction="always"
      android:title="Sort" />
</menu>
