...
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.CoordinatorLayout
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            android:id="@+id/contentPanel"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:id="@+id/LLRoot"
                android:layout_width="match_parent"
...
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:text="@string/lorem" />


                        <android.support.v7.widget.CardView
                            android:id="@+id/cardBuy"
                            android:clickable="true"
                            android:foreground="?attr/selectableItemBackground"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_marginLeft="@dimen/margin_big"
                            android:layout_marginRight="@dimen/margin_big"
...
